--- a/style.css
+++ b/style.css
@@ -49,10 +49,99 @@ a:visited {
   flex-direction: column;
 }
 
+.top__container {
+  padding: 1rem 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .logo {
   height: 5.2rem;
   align-self: center;
-  margin-bottom: 4rem;
+  margin-bottom: 1rem;
+}
+
+.weather {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 1rem;
+}
+
+.temperature {
+  grid-row: span 3;
+  justify-content: center;
+  font-size: 5rem;
+  text-align: right;
+}
+
+.city {
+  font-size: 1.5rem;
+  margin-top: 2rem;
+  text-align: left;
+}
+
+.status {
+  grid-row: span 2;
+  margin-bottom: 2rem;
+  text-align: left;
+}
+
+.command__bar {
+  padding: 1rem 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.sort {
+  margin: 0.25rem;
+  width: 7rem;
+  padding: 0.5rem 0;
+  font-size: 1.3rem;
+  border-radius: 0.5rem;
+  height: 3rem;
+  background-color: var(--color-dark--2);
+  color: var(--color-light--2);
+  cursor: pointer;
+}
+
+.global__scope {
+  width: 4rem;
+  height: 3rem;
+  padding: 0.4rem 0;
+  font-size: 2rem;
+  border-radius: 0.5rem;
+  background-color: var(--color-dark--2);
+  color: var(--color-light--2);
+  cursor: pointer;
+}
+
+.clear__all {
+  display: inline-block;
+  width: 7rem;
+  font-size: 1.3rem;
+  background-color: var(--color-dark--2);
+  color: var(--color-light--2);
+  border-radius: 0.5rem;
+  cursor: pointer;
+  height: 3rem;
+}
+
+.hover__state:hover {
+  color: #00c46a;
+  transition: color 0.2s;
+}
+
+.clear__all span {
+  vertical-align: middle;
+}
+
+.clear__icon {
+  vertical-align: middle;
+  padding: 0 0.3rem;
 }
 
 .workouts {
@@ -71,7 +160,6 @@ a:visited {
   border-radius: 5px;
   padding: 1.5rem 2.25rem;
   margin-bottom: 1.75rem;
-  cursor: pointer;
 
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -84,10 +172,47 @@ a:visited {
   border-left: 5px solid var(--color-brand--1);
 }
 
+.title__container {
+  grid-column: 1 / -1;
+  display: flex;
+  justify-content: space-between;
+}
+.icon__container {
+  width: 5rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.button {
+  font-size: 1.8rem;
+  height: 2.3rem;
+  border-radius: 0.75rem;
+  cursor: pointer;
+}
+
+.edit__btn {
+  background-color: #2980b9;
+}
+
+.edit__btn:hover {
+  background-color: #25648e;
+}
+
+.delete__btn {
+  background-color: #e74c3c;
+}
+
+.delete__btn:hover {
+  background-color: #a81d1d;
+}
+
+.icon {
+  color: var(--color-light--2);
+}
+
 .workout__title {
   font-size: 1.7rem;
   font-weight: 600;
-  grid-column: 1 / -1;
 }
 
 .workout__details {
